# uk-grantmaking-data-cleaning

./: Procfile  app.json  pyproject.toml  readme.md  requirements.in  requirements.txt  tags.csv  update_daily.sh
.github/workflows/: python.yml  pythontest.yml
config/: asgi.py  context_processors.py  jinja2.py  settings.py  urls.py  wsgi.py
csv/: tags.csv  tags_u2WBPR6.csv
docs/: adding_a_funder.md  checking_a_funder.md  checking_a_funder_year.md  cleaning_tasks.md  data_model.md  initiate_financial_year.md  updating_data_from_FTC.md  updating_government_grants.md  writing_a_new_database_view.md
jinja2/: base.html.j2  financial_year.html.j2  index.html.j2  table_creator.html.j2
jinja2/components/: footer.html.j2  header.html.j2  meter.html.j2  nav.html.j2  pagination.html.j2  values.html.j2
jinja2/docs/: detail.html  index.html
jinja2/grantmakers/: detail.html.j2  index.html.j2  notfound.html.j2  upload.html.j2
staticfiles/css/: main.css
ukgrantmaking/: admin.py  apps.py  models.py  views.py
ukgrantmaking/admin/: __init__.py  cleaningstatus.py  csv_upload.py  financial_year.py  funder.py  funder_financial_year.py  funder_year.py  funders.py  grants.py  utils.py
ukgrantmaking/filters/: grantmakers.py
ukgrantmaking/forms/: funder.py  funder_upload.py
ukgrantmaking/migrations/: 0001_initial.py  0001_squashed_0021_alter_funder_name.py  0001_squashed_0143_rename_award_date_grant_award_date_registered_and_more.py  0002_alter_funder_segment.py  0003_alter_funder_segment.py  0004_alter_funder_charity_number.py  0005_alter_funder_included_and_more.py  (+142 more)
(+70 files in other folders)
